--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <div class="window">
-        <div class="images">
+        <div id="slides" class="images">
             <image src="./1.jpg" ></image>
             <image src="./2.jpg" ></image>
             <image src="./3.jpg" ></image>
         </div>
+    </div>
+    <div id="buttonWrapper" style="text-align:center;">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
     </div>
     <script src="./jquery-3.2.1.js"></script>
     <script src="./main.js"></script>
