--- a/index.html
+++ b/index.html
@@ -6,18 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
     <title>无缝轮播</title>
-    <style type="text/css">
-        .icon {
-           width: 1em; height: 1em;
-           vertical-align: -0.15em;
-           fill: currentColor;
-           overflow: hidden;
-        }
-    </style>
 </head>
 <body>
     <div class="iconWrapper">
-        <svg class="icon" aria-hidden="true">
+        <svg id="previous" class="icon" aria-hidden="true">
                 <use xlink:href="#icon-left"></use>
         </svg>
         <div class="container">      
@@ -28,17 +20,13 @@
                     <image src="./3.jpg" ></image>
                 </div>
             </div>
-            <div class="controller" style="text-align:center;">
-                <button id="previous">上一张</button>
-                <button id="next">下一张</button>
-            </div>
             <div id="buttonWrapper" style="text-align:center;">
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
             </div>       
         </div>
-        <svg class="icon" aria-hidden="true">
+        <svg id="next" class="icon" aria-hidden="true">
                 <use xlink:href="#icon-right"></use>
         </svg>
     </div>
