--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="container">      
             <div class="window">
                 <div id="slides" class="images">
-                    <image src="./1.jpg" ></image>
-                    <image src="./2.jpg" ></image>
-                    <image src="./3.jpg" ></image>
+                    <image src="./1.jpg" style="width:668px;height:445px;" ></image>
+                    <image src="./2.jpg" style="width:668px;height:445px;"></image>
+                    <image src="./3.jpg" style="width:668px;height:445px;"></image>
                 </div>
             </div>
             <div id="buttonWrapper" style="text-align:center;">
