点击别处关闭浮层

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <svg id="previous" class="icon" aria-hidden="true">
                 <use xlink:href="#icon-left"></use>
         </svg>
-        <div class="container">      
+        <div id="container" class="container">      
             <div class="window">
                 <div id="slides" class="images">
                     <image src="./1.jpg" style="width:668px;height:445px;" ></image>
@@ -24,7 +24,11 @@
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-            </div>       
+            </div>     
+            <div id="clickWrapper" class="clickWrapper">
+                <span id="clickMe" class="clickMe">Click Here</span>
+            </div>
+            <div id="popover" class="popover">Cats are the cutest animals in the world !</div>
         </div>
         <svg id="next" class="icon" aria-hidden="true">
                 <use xlink:href="#icon-right"></use>
